# django-camunda

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
django_camunda/: __init__.py  admin.py  api.py  apps.py  bpmn.py  camunda_models.py  client.py  constants.py  fields.py  forms.py  interface.py  models.py  tasks.py  types.py  utils.py
django_camunda/dmn/: __init__.py  api.py  datastructures.py  parser.py  types.py  utils.py
django_camunda/management/commands/: delete_process_instance.py
django_camunda/migrations/: 0001_initial.py  0002_camundaconfig_auth_header.py  0003_auto_20200227_1552.py  0004_camundaconfig_enabled.py  0005_auto_20211220_1742.py
docker/: docker-compose.camunda.yml
docs/: check_sphinx.py  index.rst  quickstart.rst
testapp/: admin.py  models.py  settings.py
tests/: conftest.py  test_admin.py  test_client_config.py  test_serialize_variables.py
tests/dmn/: test_evaluation.py  test_introspection.py  test_parser.py
tests/dmn/data/: xml.py
tests/files/: decision_def.dmn  multi-drd.dmn
