# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-camunda
version = 0.12.0
description = Interact with Camunda from Django
long_description = file: README.rst
url = https://github.com/maykinmedia/django-camunda
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = camunda, process engine, bpmn, common ground
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    defusedxml
    django
    django-solo
    inflection
    requests
    python-dateutil
    typing-extensions; python_version < "3.8"
tests_require =
    pytest
    pytest-django
    requests_mock
    django-webtest
    tox
    isort
    black

[options.extras_require]
celery =
    celery
tests =
    pytest
    pytest-django
    requests_mock
    django-webtest
    tox
    isort
    black
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

[options.packages.find]
exclude =
    tests
    testapp

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=django_camunda
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=testapp.settings
testpaths = tests
junit_family = xunit1

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
branch = true
cover_pylib = false
omit =
    tests/*
    testapp/*
include = django_camunda/*
